IE-testing: try flex-basis on index text to prevent overflowing text

--- a/css/index.css
+++ b/css/index.css
@@ -101,6 +101,18 @@ nav li:nth-child(1) { font-weight: 600; }
 }
 
 #index-introduction {
+	
+	/*Flex-item: 1 1 600px*/
+	flex: 1 1 600px;
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -webkit-flex: 1 1 600px;
+    -ms-flex: 1 1 600px;
+	
+	align-self: auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+	
 	max-width: 850px;
 	/*Flex-cont: defaults */
 	display: flex;
